--- a/src/makefile
+++ b/src/makefile
@@ -3,14 +3,23 @@ CFLAGS=-Wall -Wextra -Wpedantic -std=c99
 
 all: a.out
 
-a.out: main.o utils.o
-	$(CC) main.o utils.o -o a.out $(CFLAGS)
+a.out: main.o utils.o terminal.o globals.o
+	$(CC) $(CFLAGS) main.o utils.o terminal.o globals.o -o a.out 
 
-main.o: main.c utils.h utils.o
-	$(CC) -c main.c $(CFLAGS)
+main.o: main.c utils.o
+	$(CC) $(CFLAGS) -c main.c 
+
+terminal.o: terminal.c terminal.h utils.o
+	$(CC) $(CFLAGS) -c terminal.c 
 
 utils.o: utils.c utils.h
-	$(CC) -c utils.c $(CFLAGS) 
+	$(CC) $(CFLAGS) -c utils.c 
+
+globals.o: globals.h globals.c
+	$(CC) $(CFLAGS) -c globals.c 
+
+test: a.out
+	cp ./a.out -t ../test
 
 clean:
 	rm -f utils.o main.o a.out
